--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 [build]
   publish = "public"
-  command = "python app.py"
+  command = "pip install -r requirements.txt && python app.py"
 
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/app"
   status = 200
+
