--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,11 @@
 [build]
   publish = "public"
-  command = "pip install -r requirements.txt && python app.py"
+  command = "pip install -r requirements.txt"
 
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/app"
   status = 200
 
+[functions]
+  directory = "functions"
