--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
   publish = "public"
   command = "pip install -r requirements.txt"
 
+[build.environment]
+  PYTHON_VERSION = "3.8"
+
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/app"
