--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-dash
-dash-bootstrap-components
-pandas
-plotly
-flask
-gunicorn
+dash==2.17.0
+dash-bootstrap-components==1.6.0
+pandas==2.0.3
+plotly==5.22.0
+flask==3.0.3
+gunicorn==20.1.0
