--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pip install -r requirements.txt"
+  command = "pip install -r requirements.txt && pip install gunicorn && gunicorn functions.app:server"
 
 [build.environment]
   PYTHON_VERSION = "3.8"
