--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-dash==2.17.0
-dash-bootstrap-components==1.6.0
-pandas==2.0.3
-plotly==5.22.0
-flask==3.0.3
-gunicorn==20.1.0
+dash==2.0.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-renderer==2.0.0
+dash-table==5.0.0
+plotly==5.3.1
+pandas==1.3.3
