--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-dash==2.0.0
+dash==2.7.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
-dash-renderer==2.0.0
+dash-renderer==1.9.1
 dash-table==5.0.0
 plotly==5.3.1
 pandas==1.3.3
+flask==2.0.2
